2015-06-05  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-test.inc (cleanup): Run "stty sane" (interactive 
	tests only).
	* info/t/Init-inter.inc: Check for stty program.

2015-06-05  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/adjust-anchors.sh: Add comment about name of character 
	encoding.  Export LC_ALL instead of LANG.

2015-06-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/pseudotty.c: Check for failure from "write" call.  Don't 
	exit for an error communicating with controlled process; do exit 
	for error on control channel.
	* info/t/Init-inter.inc: Open FIFO for commmunicating that ginfo 
	has finished on both ends, to allow timeout to work.  Start 
	pseudotty with "exec" in case there is an intermediate shell, to 
	get its PID correctly.
	* info/t/README: Update.

2015-06-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Infokey-config: Set key-time=0 to try to increase 
	predictability of interactive tests.

2015-06-03  Karl Berry  <karl@freefriends.org>

	* prepare for pretest 5.9.93.

2015-06-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-inter.inc (run_ginfo): Close fd opened to control 
	FIFO in subshell so pseudotty can exit for an EOF.  This 
	prevents lingering processes if a test is interrupted.

2015-06-03  Karl Berry  <karl@freefriends.org>

	* texindex/ti.twjr (usage, version): combine multi-line strings.
	Suggested by Benno.
	* info/info.c (info_short_help): no leading newline on trailing
	block, to merge string with other occurrences.
	* Makefile.am (update-po): new convenience target to build both
	po and po_document strings.
	* texindex/Makefile.am: doc tweaks.

2015-06-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/pseudotty.c: Don't get control channel from an already 
	redirected file descriptor, get it from the filename of a FIFO 
	passed on the command line.  #define _XOPEN_SOURCE as 500 to 
	expose prototype of "ptsname" under NetBSD 6.1.4.